<resources>
    <string name="app_name">GithubUserHaki</string>
    <string name="searchbar_hint">Masukkan Nama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="favorite">Favorite</string>
    <string name="empty">-</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="tidak_ada_favorit">Tidak ada favorit.</string>
    <string name="github_logo">Github Logo</string>
    <string name="tidak_ada_followers">Tidak ada followers</string>
    <string name="nama">Nama</string>
    <string name="id">ID</string>
    <string name="Namee">Nama</string>
    <string name="theme">Theme</string>
</resources>